Reformatted code